Added buttons and completed styles file

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game</title>
-    <script src="js/main.js"></script>
+    <title>Game RPS</title>
+    <!-- <script src="js/main.js"></script> -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <h1 class="header__title">Game</h1>
+    </header>
+
+    <div class="content">
+        <nav class="btn__nav">
+            <button class="btn rock__btn">🪨</button>
+            <button class=" btn paper__btn">🗞</button>
+            <button class="btn scissors__btn">✂️</button>
+        </nav>
+    </div>
+
 </body>
 </html>
